<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.fragments.ConversionBaseFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/conversion_v_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/conversion_v_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tvConversionTypeTitle"
        android:text="@string/voice"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_26"
        android:textColor="@color/app_green"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/conversion_v_guideline1"
        app:layout_constraintBottom_toBottomOf="@+id/tvConversionTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_margin_two"
        android:layout_marginEnd="@dimen/vertical_margin_two"/>

    <TextView
        android:id="@+id/tvConversionTitle"
        android:text="@string/conversion_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_26"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/conversion_v_guideline1"
        android:layout_marginTop="@dimen/vertical_margin_two" />

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pp_menu_background"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/tvConversionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvConversionTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvConversionTitle"
        android:contentDescription="@string/menu_desc" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mainVNavViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvConversionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hud_container"
        android:layout_marginTop="@dimen/vertical_margin_one"/>

    <include
        android:id="@+id/hud_container"
        layout="@layout/conversion_hud_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>