<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hud_guideline_h_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hud_guideline_h_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hud_guideline_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hud_guideline_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hud_guideline_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

    <ImageButton
        android:id="@+id/btnManualConvert"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:clickable="false"
        android:visibility="invisible"
        android:background="@drawable/touchgreen"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@id/hud_guideline_v_1"
        app:layout_constraintStart_toStartOf="@id/hud_guideline_v_1"
        android:translationZ="3dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/manual_convert" />

    <ImageButton
        android:id="@+id/btnVoiceConvert"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/micgreen"
        android:contentDescription="@string/mic_button"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@id/hud_guideline_v_1"
        app:layout_constraintStart_toStartOf="@id/hud_guideline_v_1"
        android:translationZ="3dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivArc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/arc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hud_guideline_h_1"
        android:translationZ="1dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnTables"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/tables"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/hud_guideline_h_2"
        app:layout_constraintEnd_toEndOf="@+id/hud_guideline_v_2"
        app:layout_constraintStart_toStartOf="@id/hud_guideline_v_2"
        android:translationZ="3dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnHistory"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/history"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/hud_guideline_h_2"
        app:layout_constraintEnd_toEndOf="@+id/hud_guideline_v_3"
        app:layout_constraintStart_toStartOf="@id/hud_guideline_v_3"
        android:translationZ="3dp"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>